syntax = "proto3";

package auth.v1;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string email = 1;
}

message LoginResponse {
  bool ok = 1;
}

message LogoutRequest {}

message LogoutResponse {}
